add lock function to save worksheet and unlock to create a new version and add backup of locked worksheets in the database

--- a/index.html
+++ b/index.html
@@ -461,6 +461,15 @@
           </span>
         </button>
         <button
+            class="top_buttons"
+            id="editable"
+            style="font-size: 16px"
+            onclick="unlock(this)"
+            disabled="true"
+          >Unlock<span class="info"
+              >Create an unlocked version of the worksheet, you can edit and save it with another name.
+            </span></button>
+        <button
           class="top_buttons"
           id="open_new"
           style="float: right; font-size: 16px"
