update external links

--- a/index.html
+++ b/index.html
@@ -386,7 +386,7 @@
           of interactive artworks. A detailed description of the model can be
           found in
           <a
-            href="/resources/ISEA2023_towards a relational model of interaction.pdf"
+            href="https://isea2023.ensad.fr/#towards-models-of-co-located-interaction-in-interactive-art"
             target="_blank"
             >this publication<sup>1</sup></a
           >. The model starts by identifying the individual actors participating
@@ -423,7 +423,7 @@
           with different approaches to find the most effective description. If you have any further questions or comments, please contact <a href="mailto:d.xu@liacs.leidenuniv.nl">d.xu@liacs.leidenuniv.nl</a>.
           <br />
           <br />
-          <span style="font-size: 10px">1. Dan Xu, Maarten H. Lamers, Edwin van der Heide: Towards a Relational Model of Co-located Interaction in Interactive Art. In: Emmanuel Mahé (eds.) Proceedings of the 28th International Symposium on Electronic Art 2023, pp. 723-732. École des Arts Décoratifs (2024). Doi: <a href="https://isea2023.ensad.fr/#towards-models-of-co-located-interaction-in-interactive-art">/ISEA2023-92-full-Xu-et-al-Co-located-Interaction.</a></span>
+          <span style="font-size: 10px">1. Dan Xu, Maarten H. Lamers, Edwin van der Heide: Towards a Relational Model of Co-located Interaction in Interactive Art. In: Emmanuel Mahé (eds.) Proceedings of the 28th International Symposium on Electronic Art 2023, pp. 723-732. École des Arts Décoratifs (2024).</span>
         </div>
         <select
           id="select_interaction"
@@ -894,7 +894,7 @@
       <svg id="vis_anno" width="250" height="679"></svg>
     </div>
     <div id="credit">
-      <p style="margin: 0; padding: 0 20px 10px 20px;">Developed as part of a PhD research by <a href="https://www.universiteitleiden.nl/en/staffmembers/dan-xu#tab-1">Dan Xu</a>, supervised by Maarten H. Lamers and Edwin van der Heide</p>
+      <p style="margin: 0; padding: 0 20px 10px 20px;">Developed as part of a PhD research by <a href="https://www.universiteitleiden.nl/en/staffmembers/dan-xu#tab-1" target="_blank">Dan Xu</a>, supervised by Maarten H. Lamers and Edwin van der Heide</p>
     </div>
   </body>
 </html>
