add supervisor name

--- a/index.html
+++ b/index.html
@@ -887,7 +887,7 @@
       <svg id="vis_anno" width="250" height="679"></svg>
     </div>
     <div id="credit">
-      <p>Developed as part of a PhD research by <a href="https://www.universiteitleiden.nl/en/staffmembers/dan-xu#tab-1" target="_blank">Dan Xu</a>, supervised by Maarten H. Lamers and Edwin van der Heide</p>
+      <p>Developed as part of a PhD research by <a href="https://www.universiteitleiden.nl/en/staffmembers/dan-xu#tab-1" target="_blank">Dan Xu</a>, supervised by Maarten H. Lamers, Edwin van der Heide, Fons J. Verbeek</p>
     </div>
   </body>
 </html>
