update condition-response visualisation

--- a/index.html
+++ b/index.html
@@ -276,12 +276,14 @@
     }
     .anno_block,
     .act_block,
+    .fn_block,
     .block {
       width: 240px;
       height: auto;
       /* border: 1px solid; */
       margin: 3px;
     }
+    .fn_block,
     .act_block {
       position: relative;
       width: 98%;
