--- a/index.html
+++ b/index.html
@@ -257,7 +257,7 @@
     .ancom_block {
       position: relative;
       display: inline-block;
-      cursor: pointer;
+      cursor: help;
       font-size: 16px;
       width: 65px;
       height: auto;
@@ -292,7 +292,7 @@
       width: 120px;
       position: relative;
       display: inline-block;
-      cursor: pointer;
+      cursor: help;
     }
     .info {
       position: absolute;
