fix generate functions show up in orginal page

--- a/generate.html
+++ b/generate.html
@@ -863,13 +863,13 @@
               </div>
             </div>
             <div class="add_communication">
-              <button id="add_com" onclick="addCommunication(this)">
+              <button id="add_com" onclick="addGenerateCommunication(this)">
                 Add communication
               </button>
             </div>
           </div>
           <div class="add_action">
-            <button id="add_action" onclick="addAction(this)">
+            <button id="add_action" onclick="addGenerateAction(this)">
               Add action
             </button>
           </div>
@@ -877,7 +877,7 @@
       </div>
       <!-- add element -->
       <div class="add_element">
-        <button id="add_element" onclick="addElement(this)">Add element</button>
+        <button id="add_element" onclick="addGenerateElement(this)">Add element</button>
       </div>
       <div class="add_element" style="padding-top: 3px;line-height: 80%; width:266px; margin-right: 15px;">
         <p style="font-size: 16px; font-weight: bold; margin-bottom: 0;">Additional information:</p>
