--- a/generate.html
+++ b/generate.html
@@ -19,7 +19,7 @@
 
     <script type="module" src="input.js"></script>
     <script type="module" src="display.js"></script>
-    <script src="permutate.js"></script>
+    <script src="permutate.js" defer></script>
     <!-- <script type="module" src="randomise.js"></script> -->
     <script src="addcom.js" defer></script>
     <script src="addact.js" defer></script>
@@ -389,6 +389,9 @@
     #permutateCount{
       width: 57px;
     }
+    #permutateCondCount{
+      width: 77px;
+    }
   </style>
   <body>
     <div id="select">
@@ -690,6 +693,7 @@
              <div class="act_block">
               <button class="generate" id="randomise_cond" style="margin:0" onclick="randomiseCondition(this)">Randomise</button>
               <button class="permutate" id="permutate_cond" style="margin:0" onclick="permutateCondition(this)">Permutate</button>
+              <input type="number" id="permutateCondCount" name="permutateCondCount" min="0" max="" value="0" onchange="loadCondPermutation(this)" disabled/>
             </div>
             </div>
             <div class="act_block">
@@ -869,7 +873,7 @@
                 <div class="block">
                   <button class="generate" id="randomise_com" style="margin:0" onclick="randomiseCommunication(this)">Randomise</button>
                   <button class="permutate" id="permutate_com" style="margin:0" onclick="permutateCommunication(this)">Permutate</button>
-                  <input type="number" id="permutateCount" name="permutateCount" min="0" max="100" onchange="loadPermutation(this)"/>
+                  <input type="number" id="permutateCount" name="permutateCount" min="0" max="" value="0" onchange="loadPermutation(this)" disabled/>
                 </div>
               </div>
             </div>
