remove mouse over see element function and add reaction to the action tooltip

--- a/generate.html
+++ b/generate.html
@@ -573,6 +573,9 @@
               needed.
               <br />
               <br />
+              When multiple actions are triggered by the same condition, you can also specify the relationship between these reaction after <b>"Then this action"</b>.
+              <br />
+              <br />
               Please enter the actions of the same elements and their conditions in a logical or
               chronological order if such relationship is present.
             </span>
@@ -582,8 +585,6 @@
       <!-- first element -->
       <div
         class="element"
-        onmouseenter="showElementInfo(event, this)"
-        onmouseleave="hideElementInfo(this)"
       >
         <button
           class="close"
