hide admin control buttons in generate html

--- a/generate.html
+++ b/generate.html
@@ -916,12 +916,12 @@
       </div>
       <div id="footnote_container"></div>
     </div>
-    <div id="admin_control" style="padding: 10px 20px 0px 25px">
-      <!-- <button id="saveData">Save Data</button> -->
+    <!-- <div id="admin_control" style="padding: 10px 20px 0px 25px">
+      <button id="saveData">Save Data</button>
       <button id="updateType">Update Element Type</button>
       <button id="updateAction">Update Action List</button>
       <button id="updateEffect">Update Effect List</button>
-    </div>
+    </div> -->
     <div style="margin: 15px">
       <button class="generate" onclick="randomiseAllCommunication()">Randomise all communication</button>
       <button class="generate" onclick="randomiseAllCondition()">Randomise all condition</button>
