remove element info div

--- a/generate.html
+++ b/generate.html
@@ -147,7 +147,7 @@
     .control_button:hover .info {
       visibility: visible;
     }
-    .element_info {
+    /* .element_info {
       position: fixed;
       z-index: 50;
       font-size: 12px;
@@ -156,7 +156,7 @@
       height: auto;
       border: 1px solid burlywood;
       background-color: blanchedalmond;
-    }
+    } */
     #footnote_container,
     .element,
     .annotation,
@@ -593,7 +593,7 @@
         >
           X
         </button>
-        <div class="element_info"></div>
+        <!-- <div class="element_info"></div> -->
         <div class="block" style="width:100%"><span id="index">#1</span><button class="generate" onclick="generateElement(this)">Generate element</button><button class="generate" onclick="completeElement(this)">Complete element</button></div>
         <div class="block">
           <input
