--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
     .control_button:hover .info {
       visibility: visible;
     }
-    .element_info {
+    /* .element_info {
       position: fixed;
       z-index: 50;
       font-size: 12px;
@@ -155,7 +155,7 @@
       height: auto;
       border: 1px solid burlywood;
       background-color: blanchedalmond;
-    }
+    } */
     #footnote_container,
     .element,
     .annotation,
@@ -568,7 +568,7 @@
         >
           X
         </button>
-        <div class="element_info"></div>
+        <!-- <div class="element_info"></div> -->
         <div class="block"><span id="index">#1</span></div>
         <div class="block">
           <input
